[GStreamer] MPEG-TS build, safety and leak issues https://bugs.webkit.org/show_bug.cgi?id=301852

Reviewed by Alicia Boya Garcia.

Use span utilities, fix the build issues and one memory leak (section data ownership wasn't handled
properly).

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::processMpegTsSection):

Canonical link: https://commits.webkit.org/302493@main