Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -99,6 +99,7 @@
 #include <wtf/URL.h>
 #include <wtf/UniStdExtras.h>
 #include <wtf/WallTime.h>
+#include <wtf/glib/GSpanExtras.h>
 #include <wtf/glib/RunLoopSourcePriority.h>
 #include <wtf/text/AtomString.h>
 #include <wtf/text/CString.h>
@@ -2484,8 +2485,8 @@ void MediaPlayerPrivateGStreamer::processMpegTsSection(GstMpegtsSection* section
     if (section->section_type == GST_MPEGTS_SECTION_PMT) {
         const GstMpegtsPMT* pmt = gst_mpegts_section_get_pmt(section);
         m_metadataTracks.clear();
-        for (unsigned i = 0; i < pmt->streams->len; ++i) {
-            const GstMpegtsPMTStream* stream = static_cast<const GstMpegtsPMTStream*>(g_ptr_array_index(pmt->streams, i));
+        GRefPtr<GPtrArray> streams = pmt->streams;
+        for (auto stream : span<GstMpegtsPMTStream*>(streams)) {
             if (stream->stream_type == 0x05 || stream->stream_type >= 0x80) {
                 AtomString pid = AtomString::number(stream->pid);
                 RefPtr<InbandMetadataTextTrackPrivateGStreamer> track = InbandMetadataTextTrackPrivateGStreamer::create(
@@ -2503,29 +2504,26 @@ void MediaPlayerPrivateGStreamer::processMpegTsSection(GstMpegtsSection* section
                 // expressed in hexadecimal using uppercase ASCII hex digits.
                 StringBuilder inbandMetadataTrackDispatchType;
                 inbandMetadataTrackDispatchType.append(hex(stream->stream_type, 2));
-                for (unsigned j = 0; j < stream->descriptors->len; ++j) {
-                    const GstMpegtsDescriptor* descriptor = static_cast<const GstMpegtsDescriptor*>(g_ptr_array_index(stream->descriptors, j));
+                GRefPtr<GPtrArray> descriptors = stream->descriptors;
+                for (auto descriptor : span<GstMpegtsDescriptor*>(descriptors)) {
+                    auto descriptorData = unsafeMakeSpan(descriptor->data, descriptor->length);
                     for (unsigned k = 0; k < descriptor->length; ++k)
-                        inbandMetadataTrackDispatchType.append(hex(descriptor->data[k], 2));
+                        inbandMetadataTrackDispatchType.append(hex(descriptorData[k], 2));
                 }
                 track->setInBandMetadataTrackDispatchType(inbandMetadataTrackDispatchType.toAtomString());
 
-                m_metadataTracks.add(pid, track);
+                m_metadataTracks.add(stream->pid, track);
                 if (RefPtr player = m_player.get())
                     player->addTextTrack(*track);
             }
         }
     } else {
-        AtomString pid = AtomString::number(section->pid);
-        RefPtr<InbandMetadataTextTrackPrivateGStreamer> track = m_metadataTracks.get(pid);
+        RefPtr<InbandMetadataTextTrackPrivateGStreamer> track = m_metadataTracks.get(section->pid);
         if (!track)
             return;
 
-        GRefPtr<GBytes> data = gst_mpegts_section_get_data(section);
-        gsize size;
-        const void* bytes = g_bytes_get_data(data.get(), &size);
-
-        track->addDataCue(currentTime(), currentTime(), { static_cast<const uint8_t*>(bytes), size });
+        GRefPtr<GBytes> data = adoptGRef(gst_mpegts_section_get_data(section));
+        track->addDataCue(currentTime(), currentTime(), span(data));
     }
 }
 #endif
